# wallet2cointracking

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  DATABASE_ER_DIAGRAM.md  DATABASE_HEALTH_STATUS_SUMMARY.md  DATABASE_INTEGRATION.md  DATABASE_SUMMARY.md  README.md  README_DEVELOPMENT.md  app.py  database.py  debug_flask.py  defi_config.py  migrate_db.py  pyproject.toml  requirements.txt  setup.py  test_database_integration.py  validate_wallet_storage.py
.github/chatmodes/: Refactor-Py.chatmode.md
.github/workflows/: check_pyc.yml  ci.yml  migrate.yml  python-ci.yml
alembic/: env.py  script.py.mako
app/: __init__.py
app_new/: README.md  __init__.py
data/: address_info_cache.json  token_meta_cache.json
docs/: DEVELOPMENT.md  diagrams.md  openapi_timestamps.yaml
etl/: env.example  run_daily_tail.sh  run_window.sh
logs/: app.err
scripts/: check_db_counts.py  check_timestamptz_columns.py  cleanup_workspace.py  db_counts.py  insert_csv_transactions.py  insert_test_tx.py  inspect_csv.py  preflight_timestamptz_check.py  print_masked_db_url.py  run_e2e_job.py  run_job_direct.py  run_production_server.py  run_start_job.py
templates/: index.html
tests/: test_arbitrum_summary.py  test_coingecko_helper.py  test_db_integration.py  test_defi_curve_detection.py  test_defi_exported_functions.py  test_defi_helpers.py  test_defi_service.py  test_explorer.py  test_flare_tokens.py  test_prefetch_token_meta.py  test_runtime_disk_cache.py  test_runtime_helpers.py  test_token_decimals.py  test_token_icon_endpoint.py  test_value_parsing.py
(+23 files in other folders)
